[package]
name = "mapwar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dotenv = "0.15.0"
futures-util = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
signal-hook = "0.3.14"
tokio = { version = "1.23.0", features = ["full"] }
ts-rs = { git = "https://github.com/petersn/ts-rs", branch = "optional-changes" }
warp = "0.3.3"
